# Grit_Day_Trading_Platform

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Login-Grit-DayTrading.cmd  README.md  TECHNICAL.md  index.html  pyproject.toml
designs/2026-06-03-review-desk-layout/: spec.html  spec.md
docs/: p0_acceptance.md  p1_acceptance.md
docs/agent-handoff/: a1-storage-contract.md  a2-stp-parser.md  a3-import-api.md  a4-review-ui.md  a5-qa-evidence.md
scripts/: archive-local-minute-db.py  archive-yahoo-minute-data.py  run-backend.cmd  run-frontend.cmd
src/grit_day_trading/: __init__.py  api.py  futu_provider.py  market_archive.py  market_context.py  market_provider.py  parser.py  service.py  storage.py  strategy.py  watchlist.py  yahoo_provider.py
tests/: conftest.py  test_e2e_p0.py  test_e2e_p1.py  test_import_api.py  test_launcher_contract.py  test_market_archive.py  test_market_context.py  test_minute_candle_marker_contract.py  test_p1_api.py  test_parser.py  test_review_drill_frontend_contract.py  test_root_index_contract.py  test_storage_contract.py  test_strategy.py  test_trade_groups.py  test_watchlist.py  test_yahoo_provider.py
tests/fixtures/: stp_edge_cases.tsv  stp_missing_required.tsv  stp_p0_edge_cases.tsv  stp_sample.tsv
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css  tradingDate.ts  types.ts
